--- a/styles.css
+++ b/styles.css
@@ -126,11 +126,78 @@ color: rgb(130, 10, 10);
 
 
 
+@keyframes home-slideshow-sway {
+    0%, 100% { transform: rotate(-3deg); }
+    50% { transform: rotate(3deg); }
+}
+
 .home-container {
     display: flex;
-    justify-content: space-around; 
-    margin: 100px;
-  }
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 2rem;
+    width: 100%;
+    min-height: calc(100vh - 2rem);
+    max-width: 100%;
+    box-sizing: border-box;
+}
+
+.home-slideshow {
+    position: relative;
+    width: 100%;
+    max-width: 900px;
+    aspect-ratio: 4 / 3;
+}
+
+.home-slideshow-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 2.5s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.home-slideshow-link.active {
+    opacity: 1;
+    z-index: 1;
+}
+
+.home-slideshow-link img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.home-slideshow-link.active img {
+    animation: home-slideshow-sway 8s cubic-bezier(0.33, 0, 0.2, 1) infinite;
+}
+
+@media (max-width: 768px) {
+    .home-container {
+        margin: 0;
+        padding: 1rem;
+        min-height: calc(100vh - 1rem);
+    }
+    .home-slideshow {
+        max-width: 100%;
+        aspect-ratio: 1;
+    }
+}
+
+@media (max-width: 1549px) {
+    .home-container {
+        padding-left: 2rem;
+    }
+}
   
   .home-box {
     width: 500px;
